replace indexed list methods