@@ -105,8 +105,8 @@ public final class CommandManager implements TabExecutor {
 		String subcommandName;
 
 		// get subcommand, remove from front of list
-		if (argsList.size() > 0) {
-			subcommandName = argsList.remove(0);
+		if (!argsList.isEmpty()) {
+			subcommandName = argsList.removeFirst();
 		}
 
 		// if no arguments, set command to help
